Fix: Final wrangler.toml config for Vite build

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,9 @@
-name = "glowgridmedia"
+echo 'name = "glowgridmedia"
 compatibility_date = "2025-03-26"
 
 [build]
 command = "npm run build"
-cwd = "."
-watch_dir = "."
 
 [build.upload]
 format = "directory"
-dir = "dist"
+dir = "dist"' > wrangler.toml
