--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-echo 'name = "glowgridmedia"
+name = "glowgridmedia"
 compatibility_date = "2025-03-26"
 
 [build]
@@ -6,4 +6,4 @@ command = "npm run build"
 
 [build.upload]
 format = "directory"
-dir = "dist"' > wrangler.toml
+dir = "dist"
