--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,3 @@
 name = "glowgridmedia"
 compatibility_date = "2025-03-26"
-pages_build_output_dir = "./dist"
-
-[build]
-command = "npm run build"
-
-[build.upload]
-format = "directory"
-dir = "dist"
+pages_build_output_dir = "dist"
